Added text file for design task

--- a/assignment2/todo.txt
+++ b/assignment2/todo.txt
@@ -1,3 +1,5 @@
 
 Check useSkill and attack, can we simplify the methods? Make them more cohesive?
 
+Should receive damage be private? Requires changes to useSkill and attack methods.
+
